My local fixed version of vexa.

--- a/manage_users.ipynb
+++ b/manage_users.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "\n",
     "import os\n",
     "TOKEN = os.getenv('ADMIN_API_TOKEN')\n",
-    "url = \"http://localhost:8056\"\n",
+    "url = \"http://localhost:18057\"\n",
     "client = VexaClient(\n",
     "    base_url=url,\n",
     "    admin_key=TOKEN  # From docker-compose.yml\n",
@@ -27,13 +27,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Assuming 'client' is an instance of VexaClient with a valid admin_key\n",
-    "target_email = \"leonardo.marciano@toolzz.me\"  # Replace with the actual email\n",
-    "new_max_bots = 5                # Replace with the desired maximum"
+    "target_email = \"playsdev.vexa@gmail.com\"  # Replace with the actual email\n",
+    "new_max_bots = 5              # Replace with the desired maximum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "DEBUG: Making GET request to http://localhost:18057/admin/users/email/playsdev.vexa@gmail.com\n",
+      "DEBUG: Headers: {'Content-Type': 'application/json', 'X-Admin-API-Key': 'super-secret-vexa-token'}\n",
+      "DEBUG: Params: None\n",
+      "DEBUG: JSON data: None\n",
+      "DEBUG: Response status: 200\n",
+      "DEBUG: Response headers: {'date': 'Wed, 06 Aug 2025 12:34:58 GMT', 'server': 'uvicorn', 'content-length': '233', 'content-type': 'application/json'}\n",
+      "DEBUG: Response content: {\"email\":\"playsdev.vexa@gmail.com\",\"name\":\"playsdev-vexa\",\"image_url\":null,\"max_concurrent_bots\":500,\"data\":{\"webhook_url\":\"https://webhook-test.com/e79be735cf3e9bc0c98ca068beaac1f3\"},\"id\":1,\"created_at\":\"2025-07-30T09:53:21.126956\"}...\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_id = client.get_user_by_email(target_email)['id']"
    ]
   },
   {
@@ -46,38 +70,14 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "DEBUG: Making GET request to http://localhost:8056/admin/users/email/leonardo.marciano@toolzz.me\n",
-      "DEBUG: Headers: {'Content-Type': 'application/json', 'X-Admin-API-Key': 'lkwnekf68&IJBKb7'}\n",
-      "DEBUG: Params: None\n",
-      "DEBUG: JSON data: None\n",
-      "DEBUG: Response status: 200\n",
-      "DEBUG: Response headers: {'date': 'Sat, 24 May 2025 20:48:45 GMT, Sat, 24 May 2025 20:48:44 GMT', 'server': 'uvicorn, uvicorn', 'content-length': '254', 'content-type': 'application/json'}\n",
-      "DEBUG: Response content: {\"email\":\"leonardo.marciano@toolzz.me\",\"name\":\"Leonardo Marciano\",\"image_url\":\"https://lh3.googleusercontent.com/a/ACg8ocKGg-NsR6YslYuaNl2_QQC68-WoI-xNcZoT0KZjJe2w0SEook00=s96-c\",\"max_concurrent_bots\":1,\"id\":317,\"created_at\":\"2025-05-24T18:52:12.592276\"}...\n"
-     ]
-    }
-   ],
-   "source": [
-    "user_id = client.get_user_by_email(target_email)['id']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "DEBUG: Making PATCH request to http://localhost:8056/admin/users/317\n",
-      "DEBUG: Headers: {'Content-Type': 'application/json', 'X-Admin-API-Key': 'lkwnekf68&IJBKb7'}\n",
+      "DEBUG: Making PATCH request to http://localhost:18057/admin/users/1\n",
+      "DEBUG: Headers: {'Content-Type': 'application/json', 'X-Admin-API-Key': 'super-secret-vexa-token'}\n",
       "DEBUG: Params: None\n",
       "DEBUG: JSON data: {'max_concurrent_bots': 5}\n",
       "DEBUG: Response status: 200\n",
-      "DEBUG: Response headers: {'date': 'Sat, 24 May 2025 20:48:49 GMT, Sat, 24 May 2025 20:48:50 GMT', 'server': 'uvicorn, uvicorn', 'content-length': '254', 'content-type': 'application/json'}\n",
-      "DEBUG: Response content: {\"email\":\"leonardo.marciano@toolzz.me\",\"name\":\"Leonardo Marciano\",\"image_url\":\"https://lh3.googleusercontent.com/a/ACg8ocKGg-NsR6YslYuaNl2_QQC68-WoI-xNcZoT0KZjJe2w0SEook00=s96-c\",\"max_concurrent_bots\":5,\"id\":317,\"created_at\":\"2025-05-24T18:52:12.592276\"}...\n",
-      "Successfully updated user leonardo.marciano@toolzz.me (ID: 317): {'email': 'leonardo.marciano@toolzz.me', 'name': 'Leonardo Marciano', 'image_url': 'https://lh3.googleusercontent.com/a/ACg8ocKGg-NsR6YslYuaNl2_QQC68-WoI-xNcZoT0KZjJe2w0SEook00=s96-c', 'max_concurrent_bots': 5, 'id': 317, 'created_at': '2025-05-24T18:52:12.592276'}\n"
+      "DEBUG: Response headers: {'date': 'Wed, 06 Aug 2025 12:35:01 GMT', 'server': 'uvicorn', 'content-length': '231', 'content-type': 'application/json'}\n",
+      "DEBUG: Response content: {\"email\":\"playsdev.vexa@gmail.com\",\"name\":\"playsdev-vexa\",\"image_url\":null,\"max_concurrent_bots\":5,\"data\":{\"webhook_url\":\"https://webhook-test.com/e79be735cf3e9bc0c98ca068beaac1f3\"},\"id\":1,\"created_at\":\"2025-07-30T09:53:21.126956\"}...\n",
+      "Successfully updated user playsdev.vexa@gmail.com (ID: 1): {'email': 'playsdev.vexa@gmail.com', 'name': 'playsdev-vexa', 'image_url': None, 'max_concurrent_bots': 5, 'data': {'webhook_url': 'https://webhook-test.com/e79be735cf3e9bc0c98ca068beaac1f3'}, 'id': 1, 'created_at': '2025-07-30T09:53:21.126956'}\n"
      ]
     }
    ],
@@ -113,9 +113,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "langchain",
+   "display_name": "venv",
    "language": "python",
-   "name": "langchain"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
